[BI-43] fixed overflow on the course home page [CMS]

--- a/lms/static/sass/base/_override.scss
+++ b/lms/static/sass/base/_override.scss
@@ -3474,6 +3474,7 @@ body .content-wrapper .page-header.has-secondary .page-header-secondary {
     color: #474747;
 }
 
-.updates-article {
+.updates-article,
+div.info-wrapper section.handouts {
     word-wrap: break-word;
 }
